@@ -42,6 +42,7 @@ endif::[]
 ===== Added
 
 - Added transaction_name to reported error to allow grouping by transaction name {pull}1267[#1267]
+- Added ability to query server for version (useful in the future) {pull}1278[#1278]
 
 ===== Changed
 
